--- a/index.html
+++ b/index.html
@@ -64,5 +64,10 @@
     <script src="./js/model/index.js"></script>
     <script src="./js/view/index.js"></script>
     <script src="./js/app.js"></script>
+
+    <!-- <script src="./jsSecondVariant/controller/index.js"></script>
+    <script src="./jsSecondVariant/model/index.js"></script>
+    <script src="./jsSecondVariant/view/index.js"></script>
+    <script src="./jsSecondVariant/app.js"></script> -->
   </body>
 </html>
