--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
       </div>
     </main>
 
-    <script src="./js/controller/index.js"></script>
+<!--     <script src="./js/controller/index.js"></script>
     <script src="./js/model/index.js"></script>
     <script src="./js/view/index.js"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js"></script> -->
 
-    <!-- <script src="./jsSecondVariant/controller/index.js"></script>
+    <script src="./jsSecondVariant/controller/index.js"></script>
     <script src="./jsSecondVariant/model/index.js"></script>
     <script src="./jsSecondVariant/view/index.js"></script>
-    <script src="./jsSecondVariant/app.js"></script> -->
+    <script src="./jsSecondVariant/app.js"></script>
   </body>
 </html>
